cfn/commitflow/cfn-deploy.yml
AWSTemplateFormatVersion: '2010-09-09'

Description: >
  CommitFlow EC2 infrastructure running Docker Compose on Amazon Linux 2023.

Parameters:

  InstanceType:
    Type: String
    Default: t3.large

  KeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Existing EC2 Key Pair
    Default: aws

  AmiId:
    Type: String
    Description: Debian Trixie AMI ID for eu-central-1 (custom)
    Default: ami-0c5b8b69f48b05e46

Resources:

# -----------------------------
# Networking
# -----------------------------

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.100.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-central-1a
      VpcId: !Ref VPC
      CidrBlock: 10.100.1.0/24
      MapPublicIpOnLaunch: true

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      GatewayId: !Ref InternetGateway
      DestinationCidrBlock: 0.0.0.0/0

  RouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref PublicSubnet

# -----------------------------
# Security Group
# -----------------------------

  CommitFlowSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: CommitFlow EC2 Security Group
      VpcId: !Ref VPC

      SecurityGroupIngress:

        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 3000
          ToPort: 3000
          CidrIp: 0.0.0.0/0

      SecurityGroupEgress:
        
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

# -----------------------------
# EC2
# -----------------------------

  CommitFlowInstance:
    Type: AWS::EC2::Instance

    Properties:
      ImageId: !Ref AmiId
      InstanceType: !Ref InstanceType
      SecurityGroupIds: [!Ref CommitFlowSecurityGroup]
      SubnetId: !Ref PublicSubnet
      KeyName: !Ref KeyPair
      Tags:
        - Key: Name
          Value: CommitFlow

Outputs:
  
  PublicIP:
    Value: !GetAtt CommitFlowInstance.PublicIp

  PublicDNS:
    Value: !GetAtt CommitFlowInstance.PublicDnsName
